Testing new json data file

--- a/Main/map.html
+++ b/Main/map.html
@@ -357,7 +357,8 @@
 	<script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js"></script>
 	<script src="../Main/js/Leaflet.markercluster-master/dist/leaflet.markercluster-src.js"></script>
     <script src="../Main/js/azgs-leaflet-master/js/azgs-leaflet/TileLayer.ESRI.js"></script>
-    <script src="../Main/data/gravedata.js"></script>
+    <!-- <script src="../Main/data/gravedata.js"></script> -->
+	<script src="../Main/data/gravedata.json"></script>
     <script src="../Main/js/jquery.js"></script>
     <script src="../Main/js/bootstrap-transition.js"></script>
     <script src="../Main/js/bootstrap-alert.js"></script>
