Added in new gravedata.json to data and changed links in both map.html and index.html

--- a/Main/index.html
+++ b/Main/index.html
@@ -491,7 +491,7 @@
     <script src="../Main/js/bootstrap-typeahead.js"></script>
     <script src="../Main/js/jquery.dataTables.js"></script>
     <script src="../Main/js/datatable.bootstrap.js"></script>
-	<script src="../Main/data/gravedata.js"></script>
+	<script src="../Main/data/gravedata.json"></script>
     <script>
       !function ($) {
         $(function(){
