--- a/Main/map.html
+++ b/Main/map.html
@@ -455,7 +455,7 @@ var zoom = new L.control.zoom();
       }
     
     function popUp(feature, layer) {
-               layer.bindPopup('<strong>Name: </strong>' + feature.properties.last_name + ',' + ' ' + feature.properties.first_name + '' + feature.properties.middle_name + '</br>' + '<strong>Section/Lot/Grave #: </strong>' + feature.properties.sec_lot_grave + '</br>' + '<strong>Age: </strong>' + feature.properties.age + '</br>' + '<strong>Military: </strong>' + feature.properties.military + '</br>' + '</br>' +'<img src=' + '"' + feature.properties.url_photo + '"' + '/>');
+               layer.bindPopup('<strong>Name: </strong>' + feature.properties.last_name + ',' + ' ' + feature.properties.first_name + '' + feature.properties.middle_name + '</br>' + '<strong>Section-Lot-Grave #: </strong>' + feature.properties.section + '-' + feature.properties.lot + '-' + feature.properties.grave_num + '</br>' + '<strong>Age: </strong>' + feature.properties.age + '</br>' + '<strong>Military: </strong>' + feature.properties.military + '</br>' + '<strong>Type: </strong>' + feature.properties.type + '</br>' + '</br>' +'<img src=' + '"' + feature.properties.url_photo + '"' + '/>');
      
      }
  
