Change a typo to link to about section

--- a/Main/map.html
+++ b/Main/map.html
@@ -310,7 +310,7 @@
             <div class="nav-collapse collapse">
               <ul class="nav">
                 <li class="active"><a href="../Main/index.html#">Home</a></li>
-                <li><a href="../Main/index.htmll#about">About</a></li>
+                <li><a href="../Main/index.html#about">About</a></li>
                 <li><a href="../Main/index.html#fees">Fees</a></li>
 				<li><a href="../Main/index.html#records">Records</a></li>
 				<li><a href="../Main/index.html#contact">Contact</a></li>
