Added link to github

--- a/Main/map.html
+++ b/Main/map.html
@@ -324,6 +324,7 @@
                     <li><a href="http://opendatacatalog.ashevillenc.gov/">Open Data Asheville</a></li>
                     <li><a href="https://www.facebook.com/pages/Riverside-Cemetery/116156805072088">Join Us on Facebook!</a></li>
                     <li><a href="http://www.flickr.com/photos/66019045@N04/sets/72157630529238250/">Photos on Flickr</a></li>
+					<li><a href="https://github.com/cityofasheville/riversidecemetery.git">Fork us on Github</a></li>
                     <li class="divider"></li>
                     <li class="nav-header">Downloads</li>
                     <li><a href="http://www.ashevillenc.gov/Portals/0/city-documents/parks/parks_docs/riverside/riversidewalkingtour2012[1].pdf">Download Walking Tour PDF</a></li>
