--- a/Main/map.html
+++ b/Main/map.html
@@ -311,10 +311,10 @@
               <ul class="nav">
                 <li class="active"><a href="../Main/index.html#">Home</a></li>
                 <li><a href="../Main/index.html#about">About</a></li>
-                <li><a href="../Main/index.html#fees">Fees</a></li>
-				<li><a href="../Main/index.html#records">Records</a></li>
-				<li><a href="../Main/index.html#contact">Contact</a></li>
-				<li><a href="http://goo.gl/maps/HFzae">Directions</a></li>
+                <li><a href="../Main/index.html#history">History</a></li>
+				        <li><a href="../Main/index.html#records">Records</a></li>
+				        <li><a href="../Main/index.html#contact">Contact</a></li>
+				        <li><a href="http://goo.gl/maps/HFzae">Directions</a></li>
                 <li><a href="../Main/index.html#feedback">Feedback</a></li>
                 <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
                 <li class="dropdown">
