--- a/Main/map.html
+++ b/Main/map.html
@@ -332,7 +332,7 @@
 					<li><a href="../Main/img/RiversideFees.pdf">Download Riverside Prices & Fees PDF</a></li>
                   </ul>
                 </li>
-                <li class="pos-search"><input type="text" placeholder="Search..." id="search" /></li>
+                <li class="pos-search"><input type="text" placeholder="Last Name..." id="search" /></li>
               </ul>
             </div><!--/.nav-collapse -->
           </div><!-- /.navbar-inner -->
@@ -355,10 +355,10 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-	<script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js"></script>
-	<script src="../Main/js/Leaflet.markercluster-master/dist/leaflet.markercluster-src.js"></script>
+	  <script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js"></script>
+	  <script src="../Main/js/Leaflet.markercluster-master/dist/leaflet.markercluster-src.js"></script>
     <script src="../Main/js/azgs-leaflet-master/js/azgs-leaflet/TileLayer.ESRI.js"></script>
-	<script src="../Main/data/gravedata.json"></script>
+	  <script src="../Main/data/gravedata.json"></script>
     <script src="../Main/js/jquery.js"></script>
     <script src="../Main/js/bootstrap-transition.js"></script>
     <script src="../Main/js/bootstrap-alert.js"></script>
@@ -423,10 +423,10 @@ var zoom = new L.control.zoom();
    
      
    var cloudmade = L.tileLayer('http://{s}.tile.cloudmade.com/{key}/{styleId}/256/{z}/{x}/{y}.png', {
-	attribution: 'Map data &copy; 2011 OpenStreetMap contributors, Imagery &copy; 2011 CloudMade',
-	key: 'BC9A493B41014CAABB98F0471D759707',
-	styleId: 22677,
-	zIndex: 2
+	     attribution: 'Map data &copy; 2011 OpenStreetMap contributors, Imagery &copy; 2011 CloudMade',
+	     key: 'BC9A493B41014CAABB98F0471D759707',
+       styleId: 22677,
+	     zIndex: 2
 	
    }).addTo(map);
 		
@@ -502,6 +502,7 @@ var zoom = new L.control.zoom();
 				minLength: 3,
 				select: function( event, ui ) {
 					map.fitBounds([ui.item.LatLng]);
+          map.openPopup(popUp);
 					}
 					
 			});
