more tests https

--- a/Main/map.html
+++ b/Main/map.html
@@ -10,9 +10,9 @@
     <!-- Le styles -->
     <link href="../Main/css/bootstrap.css" rel="stylesheet">
     <link href="../Main/css/bootstrap-responsive.css" rel="stylesheet">
-    <link rel="SHORTCUT ICON" href="https://ashevillenc.gov/Portals/0/favicon.ico" />
+    <link rel="SHORTCUT ICON" href="./img/favicon.ico" />
     <link type="text/css" rel="stylesheet" href="../Main/css/stylesheet.css"/>
-    <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.5/leaflet.css" />
+    <link rel="stylesheet" href="./css/leaflet.css" />
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/ui-lightness/jquery-ui.css" /> 
     <link rel="stylesheet" href="../Main/js/Leaflet.markercluster-master/dist/MarkerCluster.css" />
     <link rel="stylesheet" href="../Main/js/Leaflet.markercluster-master/dist/MarkerCluster.Default.css" />
@@ -355,7 +355,7 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-	  <script type="text/javascript" src="https://cdn.leafletjs.com/leaflet-0.5/leaflet.js"></script>
+	  <script type="text/javascript" src="./js/leaflet.js"></script>
 	  <script src="../Main/js/Leaflet.markercluster-master/dist/leaflet.markercluster-src.js"></script>
     <script src="../Main/js/leaflet-hash.js"></script>
     <script src="../Main/js/azgs-leaflet-master/js/azgs-leaflet/TileLayer.ESRI.js"></script>
