--- a/Main/index.html
+++ b/Main/index.html
@@ -302,7 +302,7 @@
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other<b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="http://www.ashevillenc.gov/">City of Asheville</a></li>
-                    <li><a href="http://opendatacatalog.ashevillenc.gov/">Open Data Asheville</a></li>
+                    <li><a href="http://data.ashevillenc.gov/">Asheville Open Data Portal</a></li>
                     <li><a href="https://www.facebook.com/pages/Riverside-Cemetery/116156805072088">Join Us on Facebook!</a></li>
                     <li><a href="http://www.flickr.com/photos/66019045@N04/sets/72157630529238250/">Photos on Flickr</a></li>
 					<li><a href="https://github.com/cityofasheville/riversidecemetery.git">Fork us on Github</a></li>
