Updated Parks and Recreation Department name

--- a/Main/index.html
+++ b/Main/index.html
@@ -334,7 +334,7 @@
               <h1>HISTORIC RIVERSIDE CEMETERY</h1>
               <p class="lead">ESTABLISHED 1885</p>
               <p class= class="lead">CITY OF ASHEVILLE</p>
-			  <p>PARKS, RECREATION AND CULTURAL ARTS</p>
+			  <p>PARKS AND RECREATION</p>
             </div>
           </div>
         </div>
@@ -408,7 +408,7 @@
       <div class="featurette" id="history">
         <img class="featurette-image pull-left" src="http://farm8.staticflickr.com/7370/8768926627_880a391222.jpg">
         <h2 class="featurette-heading">History.<span class="muted">riverside cemetery.</span></h2>
-        <p class="lead">Riverside Cemetery was founded on August 4th, 1885 by the Asheville Cemetery Company.  It was planned as a garden style cemetery which would serve well as both a burial ground and public park. After almost 70 years of ownership, the Asheville Cemetery Company sold Riverside to the City of Asheville in 1952. The City made many improvements to the cemetery, including opening new sections for interments and paving over 3.5 miles of roads inside the cemetery gates.  Riverside was named a Buncombe County Treasure Tree Preserve in 1997. Today, we are operated by the City of Asheville Parks, Recreation and Cultural Arts Department.
+        <p class="lead">Riverside Cemetery was founded on August 4th, 1885 by the Asheville Cemetery Company.  It was planned as a garden style cemetery which would serve well as both a burial ground and public park. After almost 70 years of ownership, the Asheville Cemetery Company sold Riverside to the City of Asheville in 1952. The City made many improvements to the cemetery, including opening new sections for interments and paving over 3.5 miles of roads inside the cemetery gates.  Riverside was named a Buncombe County Treasure Tree Preserve in 1997. Today, we are operated by the City of Asheville Parks and Recreation Department.
         </p>
       </div>
 	  
