--- a/Main/index.html
+++ b/Main/index.html
@@ -308,8 +308,8 @@
 					<li><a href="https://github.com/cityofasheville/riversidecemetery.git">Fork us on Github</a></li>
                     <li class="divider"></li>
                     <li class="nav-header">Downloads</li>
-                    <li><a href="http://www.ashevillenc.gov/Portals/0/city-documents/parks/parks_docs/riverside/riversidewalkingtour2012[1].pdf">Download Walking Tour PDF</a></li>
-                    <li><a href="http://www.ashevillenc.gov/Portals/0/city-documents/parks/parks_docs/riverside/walkingtourmap2012c[1].pdf">Download Walking Map PDF</a></li>
+                    <li><a href="http://www.ashevillenc.gov/civicax/filebank/blobdload.aspx?BlobID=23552">Download Walking Tour PDF</a></li>
+                    <li><a href="http://www.ashevillenc.gov/civicax/filebank/blobdload.aspx?BlobID=23554">Download Walking Map PDF</a></li>
 					<li><a href="../Main/img/RiversideFees.pdf">Download Riverside Prices & Fees PDF</a></li>
                   </ul>
                 </li>
