--- a/Main/index.html
+++ b/Main/index.html
@@ -69,7 +69,6 @@
     }
 
 
-
     /* CUSTOMIZE THE CAROUSEL
     -------------------------------------------------- */
 
@@ -354,7 +353,7 @@
             <div class="carousel-caption">
               <h1>Find a grave</h1>
               <p class="lead">Explore Riverside Cemetery</p>
-              <a class="btn btn-large btn-primary" href="http://avl.maps.arcgis.com/home/webmap/viewer.html?webmap=d229c4a75d564a378661d5110209c4c5">View More Details</a>
+              <a class="btn btn-large btn-primary" href="http://arcg.is/1bn0rf">View More Details</a>
             </div>
           </div>
         </div>
@@ -374,9 +373,9 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="span4">
-         <a href="http://avl.maps.arcgis.com/apps/webappviewer/index.html?id=5648cfede6f94ff2a57acd725ccca41c"><img class="img-circle" src="http://farm8.staticflickr.com/7402/8759284922_9426528d22_b.jpg"></a>
+         <a href="http://arcg.is/1bn0rf"><img class="img-circle" src="http://farm8.staticflickr.com/7402/8759284922_9426528d22_b.jpg"></a>
           <h2>Search the Map</h2>
-          <p><a class="btn" href="http://avl.maps.arcgis.com/apps/webappviewer/index.html?id=5648cfede6f94ff2a57acd725ccca41c">View the Map &raquo;</a></p>
+          <p><a class="btn" href="http://arcg.is/1bn0rf">View the Map &raquo;</a></p>
         </div><!-- /.span4 -->
         <div class="span4">
           <a href="http://gis.ashevillenc.gov/mapasheville/historictour/"><img class="img-circle" src="http://farm4.staticflickr.com/3668/8768925997_8cb7d6810a.jpg"></a>   
