add message: no new lots

--- a/Main/index.html
+++ b/Main/index.html
@@ -440,7 +440,9 @@
                 <li>7am-6pm November 1 - March 31</li>
            </ul>
 		   </address>
-		   <ul class="inline">
+        </br>
+        <p><strong>Riverside Cemetery is not currently transferring or selling new Lots at this time, we apologize for any inconvenience.</strong></p>
+  		  <ul class="inline">
 				<li><a href="http://www.ashevillenc.gov/Portals/0/city-documents/parks/parks_docs/riverside/riversidewalkingtour2012[1].pdf">Riverside Cemetery Walking Tour PDF</a></li>
 				<li><a href="http://www.ashevillenc.gov/Portals/0/city-documents/parks/parks_docs/riverside/walkingtourmap2012c[1].pdf">Riverside Cemetery Walking Map PDF</a></li>
 				<li><a href="../Main/img/RiversideFees.pdf">Riverside Prices & Fees PDF</a></li>
