add message: no new lots

--- a/Main/index.html
+++ b/Main/index.html
@@ -399,7 +399,9 @@
         <h2 class="featurette-heading">About.<span class="muted">riverside cemetery.</span></h2>
         <p class="lead">Riverside Cemetery is not just a place where families come to visit a friend or a loved one. It is a place of beauty - a place where you can walk, take photographs, paint and visit the grave sites of prominent writers Thomas Wolfe and O. Henry.  Walking Tours are available at the cemetery office and can offer a unique journey into Asheville’s past. More than 4,000 visitors tour the cemetery each year. <br /><br />
 						City of Asheville’s Riverside Cemetery is located in the Montford <br /> Historic District, a short walk or drive from downtown. The cemetery<br /> features more than 87 acres of landscaped grounds. The cemetery averages approximately 50 services each year.<br /><br />
-						Services offered include grave sales, historical and genealogical research, cemetery tours, landscape maintenance, and assistance with monument purchases. Call <span class="text-info">(828) 259-5800 </span>to schedule an appointment.</p>
+						Services offered include grave sales, historical and genealogical research, cemetery tours, landscape maintenance, and assistance with monument purchases. Call <span class="text-info">(828) 259-5800 </span>to schedule an appointment.
+          (Riverside Cemetery is not currently transferring or selling new Lots at this time, we apologize for any inconvenience.)
+          </p>
       </div>
 
       <hr class="featurette-divider">
