helene closed message

--- a/Main/index.html
+++ b/Main/index.html
@@ -175,6 +175,7 @@
     <p class="lead">Established 1885</p>
     <p class="lead">City of Asheville</p>
     <p class="lead">Parks and Recreation</p>
+	<h3 style="color:red">Riverside Cemetery experienced significant impact from Tropical Storm Helene and is closed except to those attending funeral services as crews remove debris and downed trees.</h3>
   </div>
   </div>
 
