add hours to helene alert

--- a/Main/index.html
+++ b/Main/index.html
@@ -177,6 +177,13 @@
         <div class="alert alert-info" style="margin: 3rem 0;">
           <h2>Riverside Cemetery is now open with some restrictions</h2>
           <p>
+            Riverside Cemetery is open from 7am - 8pm every day.
+          </p>
+          <p>
+            Regular hours subject to change as Helene-related
+            debris cleanup, repairs, and contracted work continues.
+          </p>
+          <p>
             Please proceed with caution, avoid fenced-in areas, root balls, and sinkholes.
             Hours are subject to change, and future closures may be necessary for debris removal, repairs, and
             contracted
