updating open hours

--- a/Main/index.html
+++ b/Main/index.html
@@ -177,11 +177,8 @@
         <div class="alert alert-info" style="margin: 3rem 0;">
           <h2>Riverside Cemetery is now open with some restrictions</h2>
           <p>
-            Riverside Cemetery is open from 7am - 8pm every day.
-          </p>
-          <p>
-            Regular hours subject to change as Helene-related
-            debris cleanup, repairs, and contracted work continues.
+            Riverside Cemetery will have restricted hours Monday through Friday beginning on 07/21/2025 due to Helene clean up efforts. 
+            The grounds will only be accessible from 5pm until 8pm during weekdays until further notice, but will be open during regular hours from 7am until 8pm on weekends.
           </p>
           <p>
             Please proceed with caution, avoid fenced-in areas, root balls, and sinkholes.
@@ -321,12 +318,13 @@
           </br>Cemetery Hours: 8 a.m.-4:30 p.m., M-F
           </br>Phone: (828) 259-5800
           </br>E-mail: <a href="mailto:parks@ashevillenc.gov">parks@ashevillenc.gov</a>
-          </br>Gates are open everyday from:
+          </br>Gates are open:
           </br>
           <ul>
-            <li>7am-8pm April 1 - October 31</li>
-            <li>7am-6pm November 1 - March 31</li>
+            <li>Weekdays: 5pm-8pm</li>
+            <li>Weekends: 7am-8pm</li>
           </ul>
+          
         </address>
         </br>
         <p><strong>Riverside Cemetery is not currently transferring or selling new Lots at this time, we apologize for
